--- a/contact.html
+++ b/contact.html
@@ -352,7 +352,7 @@
             <div class="contact-card">
                 <h2>Contact Information</h2>
                 <p><strong>Email:</strong> sports.hub@college.edu</p>
-                <p><strong>Phone:</strong> +91 9876543210</p>
+                <p><strong>Phone:</strong> +91 987654XXXXX</p>
                 <p><strong>Address:</strong> Sports Complex, MLRIT College, Hyderabad, Telangana - 500043</p>
                 <p><strong>Office Hours:</strong> Monday to Friday, 9:00 AM to 5:00 PM</p>
             </div>
@@ -361,7 +361,7 @@
                 <h2>Sports Coordinator</h2>
                 <p><strong>Name:</strong> Prof. Ramesh Kumar</p>
                 <p><strong>Email:</strong> sports.coordinator@college.edu</p>
-                <p><strong>Phone:</strong> +91 9876543211</p>
+                <p><strong>Phone:</strong> +91 98765XXXXX</p>
                 <p><strong>Availability:</strong> Tuesday & Thursday, 2:00 PM to 4:00 PM</p>
             </div>
         </div>
