--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <a href="tournaments.html">Upcoming Tournaments</a>
         <a href="contact.html">Contact Us</a>
         <a href="rules.html">Rules&Regulations</a>
-        <li><a href="details.html" >Your Details</a></li>
+        <a href="details.html" >Your Details</a>
         <a href="#" id="logoutNav" onclick="logout()">Logout</a>
     </div>
 </nav>
