--- a/about.html
+++ b/about.html
@@ -5,7 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - College Sports Hub</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="nav.js"></script>
+    <script>
+        function checkLogin() {
+            let user = localStorage.getItem("loggedInUser");
+            if (!user) {
+                alert("You are not logged in. Redirecting to login page.");
+                window.location.href = "login.html";
+            } else {
+                document.getElementById("logoutNav").style.display = "inline";
+            }
+        }
+
+        function logout() {
+            localStorage.removeItem("loggedInUser");
+            alert("You have successfully logged out.");
+            window.location.href = "login.html";
+        }
+
+        function toggleMenu(e) {
+            e.stopPropagation();
+            document.getElementById('mainNav').classList.toggle('active');
+            document.getElementById('nav-backdrop').classList.toggle('active');
+        }
+
+        function closeMenu() {
+            document.getElementById('mainNav').classList.remove('active');
+            document.getElementById('nav-backdrop').classList.remove('active');
+        }
+
+        document.querySelectorAll('.main-nav a').forEach(link => {
+            link.addEventListener('click', closeMenu);
+        });
+
+        window.addEventListener('resize', function() {
+            if(window.innerWidth > 900) closeMenu();
+        });
+
+        window.addEventListener('scroll', closeMenu);
+    </script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,8 +56,7 @@
 
         /* Navigation Bar */
         nav {
-            background-color: var(--nav-bg)
-            ;
+            background-color: #00274D;
             color: white;
             padding: 15px 20px;
             display: flex;
@@ -28,10 +64,6 @@
             align-items: center;
             position: relative;
             z-index: 1000;
-            height: 150px !important;
-            min-height: 150px !important;
-            padding-top: 0 !important;
-            padding-bottom: 0 !important;
         }
 
         .logo {
@@ -42,8 +74,8 @@
         }
 
         .logo img {
-            height:30px;
-            width: 35px;
+            height: 6Opx;
+            width: auto;
         }
 
         /* Main Navigation Links */
@@ -97,8 +129,6 @@
         @media (max-width: 900px) {
             nav {
                 flex-wrap: wrap;
-                height: 120px !important;
-                min-height: 120px !important;
             }
             .main-nav {
                 position: absolute;
@@ -134,19 +164,15 @@
                 display: flex;
             }
             nav .logo, .logo img {
-                height: 120px !important;
-                max-height: 120px !important;
+                height: 80px !important;
+                max-height: 80px !important;
             }
         }
 
         @media (max-width: 600px) {
-            nav {
-                height: 90px !important;
-                min-height: 90px !important;
-            }
             nav .logo, .logo img {
-                height: 90px !important;
-                max-height: 90px !important;
+                height: 60px !important;
+                max-height: 60px !important;
             }
         }
 
@@ -348,14 +374,9 @@
             }
         }
 
-        nav .logo {
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-        nav .logo img {
-            height: 100%;
-            max-height: 100%;
+        nav .logo, .logo img {
+            height: 100px !important;
+            max-height: 100px !important;
             width: auto;
         }
     </style>
